# DentalSegmentation

./: .gitignore  CMakeLists.txt  Dockerfile  ReadMe.md  compile.sh  image.txt  image_processing.py  initial_processing.py  main.cpp  main.py  mask.txt  models.py  requirements.txt
python/: models.py  txt2image.py
scripts/: dicom.cpp  dicom.hpp  n_net.cpp  n_net.hpp  nifti.cpp  nifti.hpp  utils.cpp  utils.hpp
